<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.prajwalsapplication.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearIPhoneXorne"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageLeftSide"
                    android:layout_height="@dimen/_21pxh"
                    android:layout_width="@dimen/_54pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_leftside"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_leftside"/>
                <ImageView android:id="@+id/imageRightSide"
                    android:layout_height="@dimen/_11pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_271pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_66pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_rightside"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rightside"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowarrowleft"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageArrowleft"
                android:layout_height="@dimen/_12pxh"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="@dimen/_12pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowleft"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSignin"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_143pxh"
                android:layout_weight="0.86" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtSignin}"
                style="@style/txtGilroysemibold24" tools:text="@string/lbl_sign_in"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearEmail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_31pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtInputLabelM"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtInputLabelM}"
                style="@style/txtGilroymedium16" tools:text="@string/lbl_email"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_blue_gray_100_radius_6"
                android:ellipsize="end"
                android:hint="@string/lbl_abc_gmail_com"
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:paddingBottom="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_12pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@={loginVM.loginModel.etEmailValue}"
                android:textColorHint="@color/blue_gray_900"
                style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtInputLabelMOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtInputLabelMOne}"
            style="@style/txtGilroymedium16" tools:text="@string/lbl_password"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_gray_100_radius_6"
            android:drawableEnd="@drawable/img_vector_bluegray_200"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end"
            android:hint="@string/lbl_enter_password"
            android:id="@+id/etGroup10198"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_13pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@={loginVM.loginModel.etGroup10198Value}"
            android:textColorHint="@color/blue_gray_200"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtInputLabelS"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtInputLabelS}"
            style="@style/txtGilroymedium14" tools:text="@string/msg_forgot_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignInOne"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@string/lbl_sign_in"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_sign_in"/>
    </LinearLayout>
</layout>
