<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="accountCreationVM" type="com.prajwalsapplication.app.modules.accountcreation.data.viewmodel.AccountCreationVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearAccountCreatio"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearIPhoneXorne"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageLeftSide"
                    android:layout_height="@dimen/_21pxh"
                    android:layout_width="@dimen/_54pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_leftside"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_leftside"/>
                <ImageView android:id="@+id/imageRightSide"
                    android:layout_height="@dimen/_11pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_271pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_66pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_rightside"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rightside"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <FrameLayout android:id="@+id/frameStackellipsefive"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_150pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_38pxv" android:layout_width="@dimen/_150pxh">
            <ImageView android:id="@+id/imageEllipseFive"
                android:layout_gravity="start"
                android:layout_height="@dimen/_150pxh"
                android:layout_width="@dimen/_150pxh"
                android:scaleType="centerCrop" circular="@{true}"
                imageRes="@{@drawable/img_ellipse5}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse5"/>
            <ImageButton
                android:background="@drawable/rectangle_bg_blue_a700_radius_15"
                android:id="@+id/btnGroup460"
                android:layout_gravity="top|end"
                android:layout_height="@dimen/_30pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_2pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="@dimen/_30pxh"
                android:paddingHorizontal="@dimen/_4pxh"
                android:paddingVertical="@dimen/_4pxv"
                android:scaleType="fitCenter"
                android:src="@drawable/img_group460" tools:ignore="ContentDescription"/>
        </FrameLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumninputlabelm"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearEmail"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtInputLabelM"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{accountCreationVM.accountCreationModel.txtInputLabelM}"
                    style="@style/txtGilroymedium16" tools:text="@string/lbl_first_name"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_blue_gray_100_radius_6"
                    android:ellipsize="end"
                    android:hint="@string/msg_enter_first_name"
                    android:id="@+id/etGroup10198"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_12pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@={accountCreationVM.accountCreationModel.etGroup10198Value}"
                    android:textColorHint="@color/blue_gray_200"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearEmail1"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtInputLabelMOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{accountCreationVM.accountCreationModel.txtInputLabelMOne}"
                    style="@style/txtGilroymedium16" tools:text="@string/lbl_last_name"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_blue_gray_100_radius_6"
                    android:ellipsize="end"
                    android:hint="@string/lbl_enter_last_name"
                    android:id="@+id/etGroup10198One"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_12pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@={accountCreationVM.accountCreationModel.etGroup10198OneValue}"
                    android:textColorHint="@color/blue_gray_200"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearEmail2"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtInputLabelMTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{accountCreationVM.accountCreationModel.txtInputLabelMTwo}"
                    style="@style/txtGilroymedium16" tools:text="@string/lbl_mobile_number"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_blue_gray_100_radius_6"
                    android:ellipsize="end"
                    android:hint="@string/msg_enter_mobile_number"
                    android:id="@+id/etGroup10198Two"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_12pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@={accountCreationVM.accountCreationModel.etGroup10198TwoValue}"
                    android:textColorHint="@color/blue_gray_200"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearEmail3"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtInputLabelMThree"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{accountCreationVM.accountCreationModel.txtInputLabelMThree}"
                    style="@style/txtGilroymedium16" tools:text="@string/lbl_email_id"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_blue_gray_100_radius_6"
                    android:ellipsize="end"
                    android:hint="@string/lbl_enter_email_id"
                    android:id="@+id/etGroup10198Three"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_12pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@={accountCreationVM.accountCreationModel.etGroup10198ThreeValue}"
                    android:textColorHint="@color/blue_gray_200"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearEmail4"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtInputLabelMFour"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{accountCreationVM.accountCreationModel.txtInputLabelMFour}"
                    style="@style/txtGilroymedium16" tools:text="@string/lbl_set_password"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_blue_gray_100_radius_6"
                    android:ellipsize="end"
                    android:hint="@string/lbl_set_password"
                    android:id="@+id/etGroup10198Four"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_12pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@={accountCreationVM.accountCreationModel.etGroup10198FourValue}"
                    android:textColorHint="@color/blue_gray_200"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnCreateAccount"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text="@string/lbl_create_account"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_create_account"/>
        </LinearLayout>
    </LinearLayout>
</layout>
